change pom to use JDK19